# TatakuClient

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  TODO.md  build.rs  client  client-neb  client.bat  pre_push.sh  publish.sh  run.bat  tataku.db
crates/common/: Cargo.toml
crates/common/src/: instant.rs  lib.rs  prelude.rs
crates/common/src/data/: mod.rs  pool.rs
crates/common/src/errors/: audio_error.rs  beatmap_error.rs  diffcalc_error.rs  download_error.rs  graphics_error.rs  mod.rs  tataku_error.rs
crates/common/src/graphics/: atlas.rs  blend_mode.rs  color.rs  flashlight_render_data.rs  mod.rs  particle_emitter.rs  scissor.rs  scissor_manager.rs  slider_render_data.rs  vsync.rs
crates/common/src/math/: bounds.rs  easing.rs  interpolation.rs  matrix.rs  mod.rs  vector2.rs
crates/proc_macros/: Cargo.toml
crates/proc_macros/src/: lib.rs  settings_deserializer.rs  settings_menu.rs
crates/tataku-client/: Cargo.toml
crates/tataku-client/src/: main.rs
crates/tataku-engine/: Cargo.toml
crates/tataku-engine/src/: lib.rs  prelude.rs  tataku_event.rs
crates/tataku-engine/src/audio/: audio.rs  audio_api.rs  audio_manager.rs  mod.rs  null_audio.rs
crates/tataku-engine/src/audio/bad_audio/: kira_audio.rs
crates/tataku-engine/src/data/: action_queue.rs  mod.rs  sort_by.rs  sy_change_check.rs
crates/tataku-engine/src/data/shunting_yard/: shunting_yard.rs  token.rs
crates/tataku-engine/src/data/tataku_variables/: mod.rs  value.rs  variable.rs
crates/tataku-engine/src/databases/: beatmap_collections.rs  beatmap_preferences.rs  beatmaps.rs  database.rs  ignore_beatmaps.rs  mod.rs  score_database.rs  ui_element_info.rs
crates/tataku-engine/src/game/: mod.rs  task.rs
crates/tataku-engine/src/game/actions/: beatmap_action.rs  cursor_action.rs  game_action.rs  mod.rs  mod_action.rs  song_action.rs  task_action.rs  tataku_action.rs  window_action.rs
crates/tataku-engine/src/game/beatmap_animation/: beatmap_animation.rs  osu_storyboard.rs
crates/tataku-engine/src/game/beatmaps/: mod.rs
crates/tataku-engine/src/game/gameplay/: gamemode.rs  gameplay_manager.rs  mod.rs
crates/tataku-engine/src/game/notifications/: mod.rs  notification.rs  notification_on_click.rs
crates/tataku-engine/src/graphics/: mod.rs  renderable_collection.rs  skin_provider.rs
crates/tataku-engine/src/graphics/api/: dummy_engine.rs  graphics_engine.rs
crates/tataku-engine/src/graphics/drawables/: flashlight_drawable.rs  line.rs  mod.rs  osu_slider.rs  rectangle.rs  (+2 more)
crates/tataku-engine/src/input/: input_manager.rs  key.rs  key_modifiers.rs
crates/tataku-engine/src/interface/: centered_text_helper.rs  cursor_manager.rs  fps_display.rs  mod.rs  prelude.rs  ui_element.rs  volume_control.rs
crates/tataku-engine/src/io/: crypto.rs  downloader.rs  io.rs  mod.rs  zip.rs
crates/tataku-engine/src/locale/: collection.rs  locales.rs
crates/tataku-engine/src/online/: mod.rs  online_user.rs
crates/tataku-engine/src/settings/: common_gameplay_settings.rs  cursor_settings.rs  display_settings.rs  logging_settings.rs  mania_settings.rs  mod.rs  osu_import.rs  settings.rs  settings_deserializer.rs  settings_helpers.rs
crates/tataku-engine/src/window/: fullscreen_monitor.rs  game_to_window_event.rs  mod.rs  raw_input_helper.rs  window.rs
crates/tataku-game/: Cargo.toml
crates/tataku-game/src/: game.rs  lib.rs  prelude.rs
crates/tataku-game/src/helpers/: mod.rs  score_submit_helper.rs
crates/tataku-game/src/integrations/: discord.rs  integration.rs  lastfm.rs  media_controls.rs
crates/tataku-game/src/managers/: beatmap_list_manager.rs  beatmap_manager.rs  custom_menu_manager.rs  difficulty_manager.rs  mod.rs  multiplayer_manager.rs  notification_manager.rs  online_manager.rs  score_manager.rs  skin_manager.rs  song_manager.rs  spectator_manager.rs  task_manager.rs  variable_collection.rs
crates/tataku-game/src/menus/: direct_menu.rs  loading_menu.rs  mod.rs  pause_menu.rs  score_menu.rs  settings_menu.rs  spectator_menu.rs
crates/tataku-game/src/tasks/: beatmap_downloads_task.rs  check_beatmap_folders_task.rs  delay_task.rs  difficulty_calculation_task.rs  load_beatmaps_task.rs  mod.rs  upload_screenshot_task.rs
crates/tataku-wgpu/: Cargo.toml
crates/tataku-wgpu/src/: buffer_queue.rs  last_drawn.rs  lib.rs  render_buffer_queue_type.rs  render_buffer_type.rs  renderable_surface.rs  texture.rs  wgpu_engine.rs
crates/tataku-wgpu/src/shaders/: mod.rs
gamemodes/catch/: Cargo.toml
gamemodes/catch/src/: catch.rs  lib.rs
gamemodes/mania/: Cargo.toml
gamemodes/mania/src/: lib.rs  mania_game.rs
gamemodes/mania/src/diff_calc/: calculator.rs
gamemodes/mania/src/helpers/: auto_helper.rs  mania_playfield.rs
gamemodes/mania/src/info/: mania_hit_judgments.rs  mania_info.rs
gamemodes/mania/src/mania_helpers/: auto_helper.rs  mania_playfield.rs  mod.rs
gamemodes/mania/src/mania_info/: mania_info.rs
gamemodes/mania/src/mania_notes/: mania_hitobject.rs  mania_hold.rs  mania_note.rs
gamemodes/mania/src/notes/: mania_hold.rs  mania_timing_bar.rs
gamemodes/taiko/: Cargo.toml
gamemodes/taiko/src/: don_chan.rs  lib.rs  taiko_game.rs
gamemodes/taiko/src/diff_calc/: calculator.rs  difficulty_hit_object.rs
gamemodes/taiko/src/taiko_helpers/: auto_helper.rs  enums.rs  full_alt_counter.rs  mod.rs  note_queue.rs  taiko_playfield.rs
gamemodes/taiko/src/taiko_info/: mod.rs  taiko_info.rs  taiko_mods.rs
gamemodes/taiko/src/taiko_notes/: taiko_drumroll.rs  taiko_hitobject.rs  taiko_note.rs  taiko_spinner.rs  taiko_timing_bar.rs
gamemodes/utyping/: Cargo.toml
gamemodes/utyping/src/: lib.rs  utyping_game.rs
gamemodes/utyping/src/diff_calc/: calculator.rs
gamemodes/utyping/src/helpers/: char_conversions.rs  mod.rs  note_queue.rs
gamemodes/utyping/src/utyping_info/: mod.rs  utyping_hit_judgments.rs  utyping_info.rs
gamemodes/utyping/src/utyping_notes/: mod.rs  utyping_branch.rs  utyping_note.rs  utyping_timing_bar.rs
proc_macros/: Cargo.toml
proc_macros/src/: lib.rs  settings_deserializer.rs  settings_format.rs  settings_menu copy.rs  settings_menu.rs
(+1110 files in other folders)
