[package]
name = "tataku-client-proc-macros"
version = "0.1.1"
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
extra_debugging = []

[dependencies]
syn = "1.0"
quote = "*"
proc-macro2 = "*"
# lazy_static = "*"