[package]
name = "gamemode-mania"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

[features]
default = [ "graphics" ]
graphics = []

[dependencies]
log.workspace = true

async-trait.workspace = true

tataku-common.workspace = true
tataku-engine.workspace = true

tataku-client-common.workspace = true