[package]
name = "gamemode-taiko"
version = "0.1.0"
authors.workspace = true
edition.workspace = true

# [lib]
# crate-type = ["cdylib"]

[features]
default = [ "graphics" ]
graphics = []

[dependencies]
tracing.workspace = true
async-trait.workspace = true
futures-util.workspace = true

tataku-common.workspace = true

tataku-engine.workspace = true
tataku-client-common.workspace = true