[package]
name = "gamemode-utyping"
version = "0.1.0"
authors.workspace = true
edition.workspace = true


[features]
default = [ "graphics" ]
graphics = []

[dependencies]
tracing.workspace = true
async-trait.workspace = true
lazy_static.workspace = true
futures-util.workspace = true

tataku-common.workspace = true

tataku-engine.workspace = true
tataku-client-common.workspace = true